poprawa inicjalizacji integerow